# attestations-demo-py

./: README.md  SECURITY_README.md  pyproject.toml  requirements.txt
.github/: issue-labeler.yml  labeler.yml
.github/workflows/: backend-build.yml  build-shared.yml  build-test-project.yml  build-tf.yml  caching.yml  ci-cd-reusable.yml  community-management.yml  container-attestation.yml  container-image.yml  container.yml  frontend-build.yml  generate-docs.yml  issue-automation.yml  paralell.yml  pipeline-status.yml  reusable-backend-build.yml  reusable-frontend-build.yml  reusable-secure-build.yml  reusable-verification.yml  secure-pipeline-example.yml  simple-pipeline.yml  stale-management.yml  update-portfolio.yml
.github/workflows/old/: build.yml  paralell.yml  update-portfolio.yml
examples/: README.md  extract-provenance.sh  print-attestation.sh
examples/sample-artifact/: attestations.jsonl  github_provenance_demo-0.0.0-py3-none-any.whl
examples/sample-config/azure-terraform/active-directory/: README.md  insecure.tf  secure.tf
src/github-provenance-demo/web/: fetchcontent.py
